--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
 
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.jsoup:jsoup:1.14.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
